Fix positioning of page elements so they will always be visible regardless of where the notes are located

--- a/app/Static/css/notes.css
+++ b/app/Static/css/notes.css
@@ -27,6 +27,17 @@ body {
   width: 100%;
   height: 600px;
 }
+.page-header {
+    position: relative; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    width: fit-content;
+    max-width: 100%;
+    z-index: 1000;
+    padding: 0px 10px; 
+    line-height: 1; 
+}
+
 
 .sticky-note:active {
     cursor: grabbing;
@@ -53,6 +64,7 @@ body {
 
 .boards-sidebar-arrow-button {
   font-size: 32px;
+  z-index: 1000;
   height: 1em;
   border: none;
   background-color: transparent;
@@ -77,6 +89,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
 
 .nav-button:hover {
